Flere refaktoreringer